k8s/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres:9.5.18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # to match the name of volume whichh we want
              mountPath: /var/lib/postgresql/data # which folder in container should be mounted to volume
              subPath: postgres # which folder in volume let will map the data in container
